--- a/assets/style.css
+++ b/assets/style.css
@@ -35,48 +35,62 @@
 
 .quiz-box {
   border: 1px black solid;
-  width: 600px;
-  padding: 0 30px;
+  padding: 30px;
+  margin-top: 20px;
 }
 
 .quiz-box header {
-  position: relative;
-  z-index: 2;
-  height: 100px;
-  padding: 0 30px;
-  background: #fff;
-  border-radius: 5px 5px 0 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  height: 50px;
+  padding: 0 20px;
+  border-radius: 5px;
+  margin-bottom: 20px;
 }
-
-.time-left {
+header h1 {
+  font-size: 20px;
   text-align: right;
-  vertical-align: top;
+  padding-bottom: 10px;
+  color: red;
 }
 
 .quiz-title {
-  padding-top: 30px;
+  padding: 0;
+  color: #0c6efd;
+  font-size: 40px;
 }
 
-section {
-  padding: 25px 30px 20px 30px;
-}
 section .main-question {
   font-size: 25px;
-  font-weight: 600;
+  width: 100%;
+  height: auto;
+  margin: auto;
+  border-radius: 5px;
+  text-align: center;
 }
 
 section .option-list {
-  border: 1px solid #84c5fe;
+  border: 1px solid black;
   border-radius: 5px;
   padding: 8px 15px;
   font-size: 17px;
   margin-bottom: 15px;
   cursor: pointer;
-  transition: all 0.3s ease;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.next-button {
+  margin-top: 20px;
+  float: right;
+}
+
+footer {
+  padding: 0 30px;
+  border-top: 1px solid black;
+  margin-bottom: 80px;
+}
+
+.result-box {
+  border: 1px black solid;
+  padding: 30px;
+  margin-top: 20px;
 }
