--- a/assets/style.css
+++ b/assets/style.css
@@ -32,10 +32,24 @@
 }
 
 #quiz {
-  font-size: 30px;
-  color: red;
-  text-decoration: underline;
-  height: 200px;
+  font-size: 20px;
+  color: black;
+  font-weight: light;
 }
 
+#quiz-box {
+  height: 670px;
+  border: 1px solid black;
+  padding: 50px;
+}
 
+p {
+  font-size: 16px;
+  font-weight: bold;
+}
+#timer {
+  color: red;
+  text-align: right;
+  font-size: 35px;
+  font-weight: bolder;
+}
