--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@
   border: 1px black solid;
   border-radius: 5px;
   padding: 25px;
+  margin-top: 50px;
 }
 .info-heading span {
   text-decoration: underline;
@@ -25,7 +26,7 @@
   font-weight: bolder;
   font-size: 20px;
 }
-.quiz-buttons {
+.quiz-button {
   margin-top: 10px;
   text-align: end;
   padding: 20px;
@@ -41,6 +42,7 @@
   height: 670px;
   border: 1px solid black;
   padding: 50px;
+  display: none;
 }
 
 p {
